# fida

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  netlify.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/fida-action/: Cargo.toml
crates/fida-action/src/: lib.rs
crates/fida-agent/: Cargo.toml
crates/fida-agent/src/: lib.rs
crates/fida-agent/tests/: session_runner.rs
crates/fida-approval/: Cargo.toml
crates/fida-approval/src/: lib.rs
crates/fida-approval/tests/: approval_prompt.rs
crates/fida-audit/: Cargo.toml
crates/fida-audit/src/: event.rs  lib.rs  report.rs  store.rs  testing.rs
crates/fida-audit/tests/: prop_append_only.rs  prop_filter.rs  report_rendering.rs
crates/fida-broker/: Cargo.toml
crates/fida-broker/src/: lib.rs  testing.rs
crates/fida-broker/tests/: prop_ask_fail_closed.rs  prop_dry_run.rs  prop_exit_codes.rs  prop_observe_mode.rs
crates/fida-cli/: Cargo.toml
crates/fida-cli/src/: cli.rs  context.rs  error.rs  main.rs
crates/fida-cli/src/commands/: audit.rs  doctor.rs  exec.rs  guard.rs  hook.rs  init.rs  install.rs  integrations.rs  mcp.rs  mod.rs  observe.rs  policy.rs  presets.rs  protection.rs  report.rs  root.rs  run.rs  scan.rs  session.rs  setup_state.rs  shell_hook.rs  status.rs  toggle.rs  uninstall.rs
crates/fida-cli/tests/: cli_exit_codes.rs  init_protection.rs  protection_flow.rs
crates/fida-diff/: Cargo.toml
crates/fida-diff/src/: lib.rs
crates/fida-diff/tests/: diff_gate_git.rs  prop_action_mapping.rs
crates/fida-exec/: Cargo.toml
crates/fida-exec/src/: lib.rs
crates/fida-exec/tests/: executor_validation.rs
crates/fida-mcp/: Cargo.toml
crates/fida-mcp/src/: lib.rs  sandbox.rs  server.rs
crates/fida-mcp/tests/: proxy_stub.rs  redteam_bypass.rs
crates/fida-net/: Cargo.toml
crates/fida-net/src/: gate.rs  lib.rs
crates/fida-net/tests/: proxy_http.rs
crates/fida-policy/: Cargo.toml
crates/fida-policy/src/: compiled.rs  evaluator.rs  lib.rs  loader.rs  observe.rs  schema.rs  schema_json.rs
crates/fida-policy/src/matchers/: command.rs  mod.rs  resource.rs
crates/fida-policy/tests/: loader_errors.rs  prop_command_matcher.rs  prop_decision_complete.rs  prop_default_fallthrough.rs  prop_eval_deterministic.rs  prop_eval_stage_order.rs  prop_hard_deny.rs  prop_network_denies.rs  prop_profile_merge.rs  prop_round_trip.rs
crates/fida-scan/: Cargo.toml
crates/fida-scan/src/: lib.rs  mcp.rs
crates/fida-secrets/: Cargo.toml
crates/fida-secrets/src/: lib.rs
crates/fida-secrets/tests/: detection_sources.rs  prop_redaction.rs  prop_redaction_failure.rs
crates/fida-session/: Cargo.toml
crates/fida-session/src/: lib.rs  lifecycle.rs
crates/fida-session/tests/: prop_session_id.rs
docs/: next.config.mjs  package.json  source.config.ts  tsconfig.json
docs/app/: global.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
docs/app/api/search/: route.ts
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: cursor.tsx  landing.tsx  loader.tsx  mdx.tsx  secret-field.tsx
docs/content/docs/: index.mdx  install.mdx  meta.json  quick-start.mdx  uninstall.mdx
docs/content/docs/concepts/: actions-and-policy.mdx  meta.json  security-model.mdx
docs/content/docs/guides/: agent-integrations.mdx  mcp-gateway.mdx  meta.json  secret-scan.mdx  sessions-and-audit.mdx
docs/content/docs/reference/: cli.mdx  comparisons.mdx  meta.json  policy.mdx
docs/lib/: layout.shared.tsx
docs/plans/: secret-leak-prevention-first.md
examples/: demo.sh  fida.yaml
