[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ajipurn/fida"
description = "Fida — local-first secret leak prevention for AI coding agents"

[workspace.dependencies]
# Intra-workspace crates (dependency sinks first)
fida-action = { path = "crates/fida-action", version = "0.1.2" }
fida-policy = { path = "crates/fida-policy", version = "0.1.2" }
fida-secrets = { path = "crates/fida-secrets", version = "0.1.2" }
fida-audit = { path = "crates/fida-audit", version = "0.1.2" }
fida-session = { path = "crates/fida-session", version = "0.1.2" }
fida-exec = { path = "crates/fida-exec", version = "0.1.2" }
fida-mcp = { path = "crates/fida-mcp", version = "0.1.2" }
fida-scan = { path = "crates/fida-scan", version = "0.1.2" }

# Shared serialization stack (audit JSONL, policy YAML)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Policy compilation: command regexes, file globs, network CIDRs
regex = "1"
globset = "0.4"
ipnetwork = "0.20"

# UTC ISO-8601 timestamps (audit events, session metadata)
# Time + randomness (session ids, metadata timestamps)
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Async networking (local HTTP(S) proxy in fida-net)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }

# CLI argument parsing (fida-cli front door)
clap = { version = "4", features = ["derive"] }

# Interactive multi-select for `fida install` (cross-platform raw-mode TUI)
dialoguer = { version = "0.11", default-features = false }

# Shared dev-dependencies
proptest = "1"
tempfile = "3"
