[package]
name = "fida-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fida Agent_Adapter: launch and stream the agent child process"

[dependencies]
fida-action.workspace = true
fida-session.workspace = true
fida-broker.workspace = true
fida-diff.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
