[package]
name = "fida-approval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fida Approval_UI: interactive prompts and non-interactive policy"

[dependencies]
fida-action.workspace = true
fida-policy.workspace = true

[dev-dependencies]
fida-action.workspace = true
