[package]
name = "fida-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fida Audit_Store (append-only JSONL) and Report_Generator"

[dependencies]
fida-action.workspace = true
fida-secrets.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest.workspace = true
serde_json = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
