[package]
name = "fida-broker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fida Action_Broker: orchestrates eval -> approval -> execute -> audit"

[dependencies]
fida-action.workspace = true
fida-policy.workspace = true
fida-audit.workspace = true
fida-session.workspace = true
fida-approval.workspace = true
fida-exec.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
