[package]
name = "fida-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fida CLI front door: argument parsing, dispatch, exit codes"

[[bin]]
name = "fida"
path = "src/main.rs"

[dependencies]
fida-action.workspace = true
fida-policy.workspace = true
fida-session.workspace = true
fida-exec.workspace = true
fida-secrets.workspace = true
fida-mcp.workspace = true
fida-audit.workspace = true
fida-scan.workspace = true

# Argument parsing + async runtime (the CLI owns the Tokio runtime).
clap.workspace = true
tokio.workspace = true
dialoguer.workspace = true

# Serialization for `--json` output and `policy test` cases files.
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# UTC timestamps for `audit list --since` parsing (relative + ISO-8601).
chrono = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
